objects/Account.object
<CustomObject>
    <fields>
        <fullName>Giro_Inv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requerido para crear cliente en Sebra</description>
        <label>Giro</label>
        <referenceTo>Giro__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grupo_Deudor_Relacionado__c</fullName>
        <label>Grupo Deudor Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin Grupo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Buceo</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Ski</fullName>
                </value>
                <value>
                    <fullName>Snowboard</fullName>
                </value>
                <value>
                    <fullName>Windsurf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseHoldName__c</fullName>
        <formula>LOWER(FirstName+LastName+RUT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HouseHoldName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseHold_Creado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HouseHold Creado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HouseHold</label>
        <referenceTo>BICE_HouseHold__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INT_Error_Message__c</fullName>
        <description>This field is used to store any integration error</description>
        <label>INT Error Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea_de_negocio__c</fullName>
        <label>Idea de negocio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash management</fullName>
                </value>
                <value>
                    <fullName>Comex</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>Cursar inversiones</fullName>
                </value>
                <value>
                    <fullName>Factoring</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Mesa de dinero</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Informacion_adicional_comercial__c</fullName>
        <label>Información adicional comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_privilegiada_Cargo_SVS_171__c</fullName>
        <label>Información privilegiada (Cargo SVS 171)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Informacion_privilegiada__c</fullName>
        <label>Información privilegiada</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intereses__c</fullName>
        <label>Intereses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inv_Tipo_Cliente__c</fullName>
        <description>Inversiones: Campo que se mostrara en vista 360.</description>
        <label>Tipo Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Executive_Code__c</fullName>
        <description>Investment Executive Code, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <formula>Ejecutivo_de_Inversiones__r.ROL_Number__c</formula>
        <label>Investment Executive Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KYC Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lugar_de_Nacimiento__c</fullName>
        <label>Lugar de Nacimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Afganistán</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyán</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bangladés</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Baréin</fullName>
                </value>
                <value>
                    <fullName>Bélgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benín</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Birmania</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botsuana</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Brunéi</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDR__c</fullName>
        <description>Indicador de Rentabilidad utilizado por Banca Personas y Banca Empresas</description>
        <label>MDR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medios_de_pago_para_productos_CDB__c</fullName>
        <label>Medios de pago para productos CDB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalidad_de_operaci_n__c</fullName>
        <label>Modalidad de operación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modelo_facturaci_n__c</fullName>
        <label>Modelo facturación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facturación Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_MAC_creado__c</fullName>
        <label>Monto MAC aprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monto_Preaprobado__c</fullName>
        <description>Monto preaprobado para despliegue de campañas vigentes en vista 360.</description>
        <label>Monto Preaprobado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_cuenta__c</fullName>
        <label>N° de cuenta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_RUT__c</fullName>
        <description>To show in the top of the page, name, family name, and RUT</description>
        <formula>If  (OR(RecordType.DeveloperName=&quot;PersonAccount&quot;,RecordType.DeveloperName=&quot;Cuentas_personales_en_CIF&quot;), FirstName  &amp;&quot; &quot;&amp; LastName&amp; &quot; &quot; &amp; Apellido_materno__pc &amp; &quot; - &quot; &amp; 
&quot; RUT:&quot; &amp;RUT__c, Name &amp; &quot; - &quot; &amp;&quot;RUT:&quot; &amp;&quot; &quot;&amp; RUT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre RUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chile</fullName>
                    <default>true</default>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>Afganistan</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alemania</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguila</fullName>
                </value>
                <value>
                    <fullName>Antigua y Barbuda</fullName>
                </value>
                <value>
                    <fullName>Antillas Holandesas</fullName>
                </value>
                <value>
                    <fullName>Arabia Saudita</fullName>
                </value>
                <value>
                    <fullName>Argelia</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaiyan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrein</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgica</fullName>
                </value>
                <value>
                    <fullName>Belice</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bielorrusia</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia y Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nivel_de_Riesgo_de_la_Cartera__c</fullName>
        <label>Nivel de Riesgo de la Cartera</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nombres__c</fullName>
        <description>Solo para creacion PJ Inversiones</description>
        <label>Nombres</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_comercial__c</fullName>
        <label>Número calle comercial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_GIN__c</fullName>
        <label>Número de GIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_TIN__c</fullName>
        <label>Número de TIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_particular__c</fullName>
        <label>Número calle particular</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observacion_Area_Cliente__c</fullName>
        <label>Observación Área Cliente</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Obtener_Foto_y_Huellas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obtener Foto y Huellas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <description>Office Number, used in customer creation form for Personas Naturales and Personas Jurídicas</description>
        <label>Office Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oportunidaes__c</fullName>
        <label># Oportunidaes</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cerrada Ganada, Cerrada Perdida</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Otra_idea_de_negocio__c</fullName>
        <label>Otra idea de negocio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Otras_Sociedades__c</fullName>
        <label>Otras Sociedades</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No tiene otras sociedades</fullName>
                </value>
                <value>
                    <fullName>Tiene otras sociedades: Se adjuntan antecedentes y malla de empresas relacionadas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pa_s_Casa_Matriz__c</fullName>
        <label>País Casa Matriz</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pa_s_de_Constituci_n__c</fullName>
        <label>País de Constitución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais_comercial__c</fullName>
        <label>País comercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pais_particular__c</fullName>
        <label>País particular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pais</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfil_de_Riesgo__c</fullName>
        <label>Perfil de Riesgo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerrar</fullName>
                </value>
                <value>
                    <fullName>Muy Agresivo</fullName>
                </value>
                <value>
                    <fullName>Agresivo</fullName>
                </value>
                <value>
                    <fullName>Balanceado</fullName>
                </value>
                <value>
                    <fullName>Conservador</fullName>
                </value>
                <value>
                    <fullName>Muy Conservador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfil_de_inversionista__c</fullName>
        <label>Perfil de inversionista</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantilla_Producto__c</fullName>
        <label>Plantilla Producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custodia Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plantilla_cobro__c</fullName>
        <label>Plantilla cobro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente validar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plataforma_Siga_CRM__c</fullName>
        <label>Plataforma Siga CRM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Plataforma_Torre__c</fullName>
        <label>Plataforma Torre</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Plataforma_de_captacion__c</fullName>
        <label>Plataforma de captación</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Credit_Limit__c</fullName>
        <description>Field to store Prior MAC Credit Limit  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Expiration_Date__c</fullName>
        <description>Field to store Prior MAC Expiration Date  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Presentation_Date__c</fullName>
        <description>Field to store Prior MAC Presentation Date   - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Presentation Date  </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Request_Date__c</fullName>
        <description>Field to store Prior MAC Request Date  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Request_Number__c</fullName>
        <description>Field to store Prior MAC Request Number - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Prior MAC Request Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_MAC_Status__c</fullName>
        <description>Field to store Prior MAC Status  - for a Comité Meeting that occurs in respect to a customer.
CODIGO	DESCRIPCION
A		APROBADO
D		DIGITADO POR AUXILIAR
P		EN PROCESO POR EJECUTIVO
R		RECHAZADO
PES04	EN PROCESO COMITE
PES06	CONDICIONADO COMITE
M		MODIFICACION GCIA DE CREDITOS
PES10	MANUAL
PES07	CADUCADO</description>
        <label>Prior MAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APROBADO</fullName>
                </value>
                <value>
                    <fullName>DIGITADO POR AUXILIAR</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO POR EJECUTIVO</fullName>
                </value>
                <value>
                    <fullName>RECHAZADO</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO COMITE</fullName>
                </value>
                <value>
                    <fullName>CONDICIONADO COMITE</fullName>
                </value>
                <value>
                    <fullName>MODIFICACION GCIA DE CREDITOS</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
                <value>
                    <fullName>CADUCADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profin_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Comercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prop_sito_cuenta__c</fullName>
        <label>Propósito cuenta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intermediación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROA_12_meses__c</fullName>
        <label>ROA 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_1_dia__c</fullName>
        <label>ROA 1 día</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_30_dias__c</fullName>
        <label>ROA 30 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_7_d_image__c</fullName>
        <description>Variable de Prueba para demo de Gabriel</description>
        <formula>text(ROA_7_dias__c*100)&amp;&quot;% &quot; &amp; IF( ISBLANK(ROA_7_dias__c) ,&quot;&quot;,IMAGE(&quot;http://upper90studios.com/wp-content/uploads/2015/09/green-red-arrows.png?x77031&quot;, &quot;&quot;,15, 20))</formula>
        <label>ROA 7 d</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROA_7_dias__c</fullName>
        <label>ROA 7 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ROA_YTD__c</fullName>
        <label>ROA YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RUT__c</fullName>
        <description>RUT para Empresas y Personas (RUT for Accounts and Person Accounts)</description>
        <externalId>true</externalId>
        <label>RUT</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUT_sin_puntos_AUX__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( RUT__c,&quot;k&quot;,&quot;K&quot;),&quot;-&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;)</formula>
        <label>RUT sin puntos AUX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raz_n_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region_comercial__c</fullName>
        <label>Región comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_particular__c</fullName>
        <label>Región particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_Fotogr_fico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registro Fotográfico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registro_de_Firma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registro de Firma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relacion_Gestion_Banco__c</fullName>
        <label>Relacion Banco Bice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No relacionado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relacion_con_corredora_Circ_1064__c</fullName>
        <label>Relación con corredora (Circ. 1064)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_12_meses__c</fullName>
        <label>Rentabilidad 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_1_dia__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rentabilidad 1 día</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_30_dias__c</fullName>
        <label>Rentabilidad 30 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_7_dias__c</fullName>
        <label>Rentabilidad 7 días</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rentabilidad_YTD__c</fullName>
        <label>Rentabilidad YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rep_Legal_email__c</fullName>
        <description>Utilizado para Creación Clientes PJ Inversiones</description>
        <label>Rep Legal email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requerimiento_comercial_de_la_empresa__c</fullName>
        <label>Requerimiento comercial de la empresa</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cuenta corriente</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_verificacion_requisitos__c</fullName>
        <label>Resultado verificación requisitos</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rut_formato_AUX__c</fullName>
        <description>Fórmula con puntos:
IF( n_AUX__c &lt;=1, RIGHT(RUT_sin_puntos_AUX__c, 1),
IF( n_AUX__c &lt;=4, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -1) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
IF( n_AUX__c &lt;=7, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -4) &amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -3, 3) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
IF( n_AUX__c &lt;=10, LEFT(RUT_sin_puntos_AUX__c, n_AUX__c -7)&amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -6, 3) &amp;&quot;.&quot;&amp; MID(RUT_sin_puntos_AUX__c, n_AUX__c -3, 3) &amp;&quot;-&quot;&amp; RIGHT(RUT_sin_puntos_AUX__c, 1), 
&quot;RUT incorrecto&quot;) ) ))</description>
        <formula>IF( n_AUX__c &lt;= 1,&quot;&quot;,LEFT( RUT_sin_puntos_AUX__c,LEN(RUT_sin_puntos_AUX__c)-1)&amp;&quot;-&quot;&amp;RIGHT(RUT_sin_puntos_AUX__c,1))</formula>
        <label>Rut formato AUX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBIF_Sector__c</fullName>
        <label>Origen Sectorial (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administradoras de Fondos</fullName>
                </value>
                <value>
                    <fullName>Agentes administradores de Mutuos Hipot.</fullName>
                </value>
                <value>
                    <fullName>Banco Central de Chile</fullName>
                </value>
                <value>
                    <fullName>Banco del Estado</fullName>
                </value>
                <value>
                    <fullName>Bancos del Exterior</fullName>
                </value>
                <value>
                    <fullName>Bancos Privados</fullName>
                </value>
                <value>
                    <fullName>Compañias seguros y filiales de la misma</fullName>
                </value>
                <value>
                    <fullName>Cooperativas de ahorro y credito</fullName>
                </value>
                <value>
                    <fullName>Corredores de bolsa y agentes valores</fullName>
                </value>
                <value>
                    <fullName>Emisores y operadores de tarj de credito</fullName>
                </value>
                <value>
                    <fullName>Empresas Publicas</fullName>
                </value>
                <value>
                    <fullName>Filial Bco Estado fisc. x otras Superint</fullName>
                </value>
                <value>
                    <fullName>Filiales bancarias fisc x la SBIF</fullName>
                </value>
                <value>
                    <fullName>Filiales del Bco del Estado Chile f.SBIF</fullName>
                </value>
                <value>
                    <fullName>Fisco, Gobierno y Org. Descentralizados</fullName>
                </value>
                <value>
                    <fullName>Gobierno y Agenc Gub del Exterior</fullName>
                </value>
                <value>
                    <fullName>Gran Mineria Cobre y Andina</fullName>
                </value>
                <value>
                    <fullName>Municipalidades</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Otros Personas o entidades residentes en el exterior</fullName>
                </value>
                <value>
                    <fullName>Personas Jur. sin Fines de Lucro</fullName>
                </value>
                <value>
                    <fullName>Personas Juridicas con fines de lucro</fullName>
                </value>
                <value>
                    <fullName>Sin clasificar</fullName>
                </value>
                <value>
                    <fullName>Sistema Previsional, Sector Privado</fullName>
                </value>
                <value>
                    <fullName>Sistema Previsional Público</fullName>
                </value>
                <value>
                    <fullName>Sociedades securitizadoras</fullName>
                </value>
                <value>
                    <fullName>Personas Naturales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SII_DJ_1820_1829__c</fullName>
        <label>SII (DJ 1820-1829)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentaci_n_BI__c</fullName>
        <label>Segmentación BI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>